<resources>
    <string name="app_name">KinoTomato</string>

    <string name="film_name_1">Иван Васильевич меняет профессию</string>
    <string name="film_name_2">Вампиры средней полосы</string>
    <string name="film_name_3">Зеленая книга</string>

    <string name="film_year_1">1973</string>
    <string name="film_year_2">2021</string>
    <string name="film_year_3">2018</string>

    <string name="film_definition_1">Инженер-изобретатель Тимофеев сконструировал машину времени, которая соединила его квартиру с далеким шестнадцатым веком - точнее, с палатами государя Ивана Грозного. Туда-то и попадают тезка царя пенсионер-общественник Иван Васильевич Бунша и квартирный вор Жорж Милославский.На их место в двадцатом веке «переселяется» великий государь. Поломка машины приводит ко множеству неожиданных и забавных событий…</string>
    <string name="film_definition_2">Смоленск — среднестатистический город средней полосы России. Но не совсем. Много веков тут живут вампиры, которые хоть и позволяют себе охотиться на людей, но всё же свято чтут договор, по которому за каждое убийство нужно отдать хранителям на казнь одного из своих. Когда в березовой роще под Смоленском находят обескровленных парней, их мирная жизнь оказывается под угрозой. Теперь местной вампирской ячейке общества под руководством самого старого вампира деда Славы, он же — Святослав Вернидубович, предстоит в кратчайшие сроки найти нарушителя спокойствия.</string>
    <string name="film_definition_3">1960-е годы. После закрытия нью-йоркского ночного клуба на ремонт вышибала Тони по прозвищу Болтун ищет подработку на пару месяцев. Как раз в это время Дон Ширли — утонченный светский лев, богатый и талантливый чернокожий музыкант, исполняющий классическую музыку — собирается в турне по южным штатам, где ещё сильны расистские убеждения и царит сегрегация. Он нанимает Тони в качестве водителя, телохранителя и человека, способного решать текущие проблемы. У этих двоих так мало общего, и эта поездка навсегда изменит жизнь обоих.</string>
    <string name="btnClose">Закрыть</string>
    <string name="btnInvite">Пригласить</string>
    <string name="btnDetails">Детали</string>
    <string name="cbText">Нравится</string>
    <string name="commentHint">Комментарий</string>
</resources>