<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_view_1"
                android:layout_width="129dp"
                android:layout_height="175dp"
                android:adjustViewBounds="true"
                android:src="@drawable/film_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:lines="3"
                android:text="@string/film_name_1"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_view_1"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/text_year_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/film_year_1"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_details_1"
                app:layout_constraintStart_toEndOf="@+id/image_view_1"
                app:layout_constraintTop_toBottomOf="@+id/text_view_1" />

            <Button
                android:id="@+id/btn_details_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Детали"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_view_2"
                android:layout_width="129dp"
                android:layout_height="175dp"
                android:adjustViewBounds="true"
                android:src="@drawable/film_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_2"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:lines="3"
                android:text="@string/film_name_2"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_view_2"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/text_year_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/film_year_2"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_details_2"
                app:layout_constraintStart_toEndOf="@+id/image_view_2"
                app:layout_constraintTop_toBottomOf="@+id/text_view_2" />

            <Button
                android:id="@+id/btn_details_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Детали"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_view_3"
                android:layout_width="129dp"
                android:layout_height="175dp"
                android:adjustViewBounds="true"
                android:src="@drawable/film_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_3"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:lines="3"
                android:text="@string/film_name_3"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_view_3"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/text_year_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/film_year_3"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_details_3"
                app:layout_constraintStart_toEndOf="@+id/image_view_3"
                app:layout_constraintTop_toBottomOf="@+id/text_view_3" />

            <Button
                android:id="@+id/btn_details_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Детали"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</ScrollView>